<resources>
    <string name="app_name">What\'s Cooking</string>
    <string name="error_message">Unable to Load Data</string>
    <string name="content_des_meal_image">Image of the Meal</string>
    <string name="ingredients_title">"Ingredients: "</string>
    <string name="instructions_title">"Instructions: "</string>
    <string name="content_des_fav_btn">Favorite button</string>
    <string name="play_video_link">Play Video</string>
    <string name="filter_results">Filter</string>
    <string name="show_favorites">Favorites</string>

    <string name="KEY_ID">id</string>
    <string name="SEARCH_ID">search_item</string>
    <string name="KEY_ING_RESULTS">ingredient_results</string>
    <string name="KEY_CAT_RESULTS">category_results</string>

    <string name="show_main">Main</string>
    <string name="favorites_title">Your Favorites</string>
    <string name="maps">Map</string>
    <string name="ingredient_search_title">Search by Ingredient</string>
    <string name="category_search_title">Search by Category</string>
    <string name="KEY_INGREDIENT">ingredient</string>
    <string name="text_bg">Background for text</string>
    <string name="action_search">Search</string>
    <string name="no_results">No Search Results Available</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="MEAL_PREFS">mealPrefs</string>
    <string name="MEAL_NAME_PREFS">mealNamePrefs</string>
    <string name="MEAL_INGREDIENT_PREFS">mealIngredientPrefs</string>
    <string name="no_favorites">No Favorites</string>
    <string name="KEY_MEAL_RESULTS">meal_results</string>
    <string name="KEY_CATEGORY">category</string>
    <string name="search_category">Search Category</string>
    <string name="search_ingredient">Search Ingredient</string>
    <string name="KEY_AREA_RESULTS">area_results</string>
    <string name="KEY_AREA">area</string>
    <string name="search_area">Search Area</string>
    <string name="area_search_title">Search by Area</string>
    <string name="KEY_SEARCH">searching</string>
</resources>