<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <group>
        <item android:id="@+id/category_search"
            android:title="@string/search_category"
            app:showAsAction="never"
            android:icon="@drawable/ic_category"/>

        <item android:id="@+id/ingredient_search"
            android:title="@string/search_ingredient"
            app:showAsAction="never"
            android:icon="@drawable/ic_ingredient"
            android:visible="false"/>

        <item android:id="@+id/area_search"
            android:title="@string/search_area"
            app:showAsAction="never"
            android:icon="@drawable/ic_globe"/>
    </group>

</menu>