<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/filter"
        app:showAsAction="always"
        android:icon="@drawable/ic_search"
        android:title="@string/filter_results"/>

    <group
        android:id="@+id/sorting_group">
        <item
            android:id="@+id/show_main"
            app:showAsAction="always"
            android:icon="@drawable/ic_home"
            android:title="@string/show_main"/>
        <item
            android:id="@+id/show_favorites"
            app:showAsAction="always"
            android:icon="@drawable/ic_fav"
            android:title="@string/show_favorites"/>
    </group>
</menu>