<?xml version="1.0" encoding="utf-8"?>
<layout>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_meals"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_no_favorites"
        android:text="@string/no_favorites"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_no_results"
        android:text="@string/no_results"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error_message"
        android:text="@string/error_message"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>
</layout>